--- a/CSS - Aula 16/index.html
+++ b/CSS - Aula 16/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Color e Gradients</title>
     <meta charset="UTF-8">
-    <meta name="description" content="Color e Gradients">
+    <meta name="description" content="Color e Gradients - Parte 1">
     <link rel="stylesheet" href="./style.css">
 </head>
 
