Realizado do 28 ao 30. Trabalhando com Normalize, Reset CSS, Calc, Filters.

--- a/CSS - Aula 28/index.html
+++ b/CSS - Aula 28/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Normalize ou Reset CSS?</title>
+    <link rel="icon" type="image/x-icon" href="./img/lsFleshCoffinLogo.png">
     <meta charset="UTF-8">
     <meta name="description" content="Normalize ou Reset CSS?">
     <link rel="stylesheet" href="./reset.css">
