Finalizado aula 30 e trilha CSS. Trabalhando com Filtros de Imagens como: Blur, Brightness, Contrast, Grayscale, Invert, Opacity, Saturate, Sepia, Hue-Rotate, Drop-Shadow.

--- a/CSS - Aula 30/index.html
+++ b/CSS - Aula 30/index.html
@@ -11,10 +11,44 @@
 
 <body>
 
-    <img src="./img/lsNewLogo.png" width="300" id="img1">
-    <br>
-    <img src="./img/lsNewLogo.png" width="300" id="img2">
-    <br>
-    <img src="./img/lsNewLogo.png" width="300" id="img3">
+    <div class="container1">
+        <div class="img1">
+            <img src="./img/lsNewLogo.png" width="300">
+        </div>
+        <div class="img2">
+            <img src="./img/lsNewLogo.png" width="300">
+        </div>
+        <div class="img3">
+            <img src="./img/lsNewLogo.png" width="300">
+        </div>
+    </div>
+    <div class="container2">
+        <div class="img4">
+            <img src="./img/lsNewLogo.png" width="300">
+        </div>
+        <div class="img5">
+            <img src="./img/lsNewLogo.png" width="300">
+        </div>
+        <div class="img6">
+            <img src="./img/lsNewLogo.png" width="300">
+        </div>
+    </div>
+    <div class="container3">
+        <div class="img7">
+            <img src="./img/lsNewLogo.png" width="300">
+        </div>
+        <div class="img8">
+            <img src="./img/lsNewLogo.png" width="300">
+        </div>
+        <div class="img9">
+            <img src="./img/lsNewLogo.png" width="300">
+        </div>
+    </div>
+    <div class="container4">
+        <div class="img10">
+            <img src="./img/lsNewLogo.png" width="300">
+        </div>
+    </div>
 </body>
+
 </html>
